# tabular-dl-transformer

./: README.md  pyproject.toml
.github/: dependabot.yaml
src/tabulardl/: __init__.py
src/tabulardl/entrypoints/: hyperparams.py  main_hyper.py  main_train.py  train.py
src/tabulardl/models/: __init__.py  encoding.py  ft_transformer.py  mlp.py  model.py  resnet.py
src/tabulardl/utils/: data.py  metrics.py  paths.py
