[project]
name = "tabulardl"
version = "0.1.0"
description = "Transformer-based model for tabular data."
readme = "README.md"
authors = [
    { name = "Wessel van Ree", email = "44018037+wesselvanree@users.noreply.github.com" }
]
requires-python = ">=3.10,<3.11"
dependencies = [
    "einops==0.8.1",
    "numpy==1.26.4",
    "optuna==3.6.2",
    "pandas==2.3.3",
    "scikit-learn==1.7.2",
    "torch==2.10.0",
    "tqdm==4.67.1",
]

[project.scripts]
tabulardl = "tabulardl:main"

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"
